--- a/conteudo/index.html
+++ b/conteudo/index.html
@@ -7,15 +7,16 @@
     <!--[if lt IE 9]>
 	  <script src="js/html5shiv.js"></script>
     <![endif]-->
-
-    <script type="text/javascript" src="js/SCORM_API_wrapper.js"></script>
-    <script type="text/javascript" src="js/navegacao.js"></script>
   </head>
   <body oncontextmenu="return false" onselectstart"return false" ondragstart="return false" onunload="fecharJanela()" onbeforeunload="fecharJanela()">
     <div class="box-video">
       <video id="video-player" width="100%" height="100%" controls preload="auto" controlsList="nodownload">
-        <source  type="video/mp4" src="video/video.mp4">
+        <source type="video/mp4" src="video/video.mp4">
       </video>
     </div>
+
+    <script type="text/javascript" src="js/SCORM_API_wrapper.js"></script>
+    <script type="text/javascript" src="js/navegacao.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
