finalizado SCORM e ajustes no responsivo do video

--- a/conteudo/index.html
+++ b/conteudo/index.html
@@ -10,7 +10,7 @@
   </head>
   <body oncontextmenu="return false" onselectstart"return false" ondragstart="return false" onunload="fecharJanela()" onbeforeunload="fecharJanela()">
     <div class="box-video">
-      <video id="video-player" width="100%" height="100%" controls preload="auto" controlsList="nodownload">
+      <video id="video-player" controls preload="auto" controlsList="nodownload">
         <source type="video/mp4" src="video/video.mp4">
       </video>
     </div>
