--- a/conteudo/index.html
+++ b/conteudo/index.html
@@ -11,7 +11,7 @@
   <body oncontextmenu="return false" onselectstart"return false" ondragstart="return false" onunload="fecharJanela()" onbeforeunload="fecharJanela()">
     <div class="box-video">
       <video id="video-player" controls preload="auto" controlsList="nodownload">
-        <source type="video/mp4" src="video/video.mp4">
+        <source src="video/video.mp4" type="video/mp4">
       </video>
     </div>
 
